--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
                 <div class="col">
                   <div class="card shadow-sm">
-                    <img src="./images/backgorund_image1.webp" class="bd-placeholder-img card-img-top" width="100%" height="225" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" />
+                    <img src="./images/portfolio_screenshot.png" class="bd-placeholder-img card-img-top" width="100%" height="225" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false" />
                     <div class="card-body">
-                      <p class="card-text" style="min-height: 145px; max-width: 350px;">In Process...</p>
+                      <p class="card-text" style="min-height: 145px; max-width: 350px;">A portfolio website created using HTML, CSS, Bootstrap and little bit of javaScript</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Source Code</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location='https://hariharan-1010.github.io/Porfolio_1/'">View</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary" onclick="window.location='https://github.com/Hariharan-1010/Porfolio_1.git'">Source Code</button>
                         </div>
                       </div>
                     </div>
